# glimmung

./: .commit-msg.txt  .dockerignore  .gitignore  .glimmung-webhook-test.txt  AGENTS.md  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
.github/: pull_request_template.md
.glimmung/: project.yaml
design-system/: README.md  SKILL.md  colors_and_type.css  plate.css
docs/: cosmos-partition-strategy.md  design-portfolio-bootstrap.md  durable-project-config.md  epics-and-playbooks.md  frontman-cluster-agent-prototype.md  frontman-live-design.md  go-migration-contracts.md  go-runtime-cleanup-inventory.md  inner-job-observation.md  mcp-surface-rollout.md  observability.md  postgres-migration.md  project-native-runner-architecture.md  project-run-queue-and-test-slot-leases.md  remote-host-execution.md  run-graph-display-design.md  styleguide-contract.md  test-slot-hot-swap.md  test-slot-lifecycle.md  touchpoints-runreports-playbooks.md  ui-package-design-portfolios.md  workflow-inspiration.md  workflow-shape.md
frontend/: index.html  package-lock.json  package.json  screenshot-pages.json  tsconfig.json  vite.config.ts
k8s/: Chart.yaml  values.yaml
k8s-mcp-glimmung/: values.yaml
mcp/: pyproject.toml
mcp/glimmung_agent/: __init__.py  cli.py  ops.py
native-runner/: Dockerfile
scripts/: check-503-observability.mjs  check-apply-test-slot-hot-swap-migration.mjs  check-chart-image-tag-sync.mjs  check-cosmos-queries.mjs  check-design-tokens.sh  check-handler-5xx-migration.mjs  check-removed-cosmos-locks.mjs  check-removed-cosmos-run-events.mjs  (+11 more)
tofu/: db.tf  (+11 more)
(+430 files in other folders)
