[project]
name = "glimmung-agent"
version = "0.1.0"
description = "CLI for glimmung's per-issue agent-CI orchestration: build image, helm install/upgrade/uninstall the issue chart, run agent Jobs."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
glimmung-agent = "glimmung_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glimmung_agent"]
